Corrected the aligned of Error Display  in Login Page

--- a/frontend/src/Components/LoginSignUp/LoginSignUp.css
+++ b/frontend/src/Components/LoginSignUp/LoginSignUp.css
@@ -135,11 +135,11 @@ body {
 
 .error {
   padding: 10px;
-  background: #ffefef;
+  background: #80808025;
   border: 1px solid #007bff;
   color: #007bff;
   border-radius: 4px;
-  margin: 20px 0;
+  margin:20px
 }
 input.error {
   border: 1px solid #e7195a;
